Made adjustment to alignment on the navbar and fixed landscape mode on mobile

--- a/styles.scss
+++ b/styles.scss
@@ -4,7 +4,7 @@
 
 .grid-header {
   display: grid;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: repeat(3, 1fr);
   padding: 10px;
   background-color: #ff4838;
 }
@@ -46,7 +46,7 @@
   width: auto;
   height: auto;
   border: 2px solid #ff4838;
-  margin-top: 5em;
+  margin-top: 4%;
   margin-bottom: 4%;
   justify-content: center;
   max-width: 100%;
@@ -140,7 +140,7 @@
     "project1 project2"
     "project3 project4";
   gap: 5%;
-  margin-bottom: 30%;
+  margin-bottom: 20%;
 }
 
 @media (max-width: 700px) {
@@ -417,5 +417,17 @@ h3 {
 @media screen and (min-width: 1600px) {
   h3 {
     font-size: 2.5em;
+  }
+}
+
+@media screen and (orientation: landscape) and (max-width: 900px) {
+  h1 {
+    margin-bottom: 0%;
+    padding: 0% 2% 0% 2%;
+  }
+
+  #profile-pic {
+    height: 300px;
+    width: 250px;
   }
 }
